[package]
name = "fes"
version = "0.1.0"
authors = ["John Woodman <jwoodman@ufl.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.6", features = ["json"] }
tokio = { version = "0.2.4", features = ["full"] }
futures = "0.3.5"
rust-crypto = "0.2.36"
hyper = "0.13.7"
clap = "2.33.2"
